Fixed grid spacing for desktop icons

--- a/src/main/webapp/src/Components/DesktopItem/DesktopItem.scss
+++ b/src/main/webapp/src/Components/DesktopItem/DesktopItem.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    width: 80px;
+    width: 90px;
     height: 60px;
     display:block;
 
@@ -23,8 +23,9 @@
 #title{
   position: relative;
   padding-top: 5px;
-  font-size: 9px;
-
+  font-size: 14px;
+  word-wrap: break-word;
+  //font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   
 }
 
